# ml_system_design_itmo

./: .env_example  .gitignore  .pre-commit-config.yml  .pylintrc  Dockerfile  Dockerfile.locust  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: check.yml
Docker/mlflow_image/: Dockerfile
docs/: ml_system_design_doc.md
notebooks/: data_split.ipynb  eda.ipynb  json.ipynb  train.ipynb
src/: catboost_tuning.py  diagram.py  locustfile.py  logger.py  main.py  utils.py
