[project]
name = "ml_system_design_itmo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RomanOdobesku"},
]
dependencies = [
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "flake8>=7.1.1",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.0",
    "catboost>=1.2.7",
    "ipywidgets>=8.1.5",
    "polars>=1.20.0",
    "shap>=0.46.0",
]
requires-python = "==3.10.15"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 99
target-version = ["py310"]