[project]
name = "ml_system_design_itmo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RomanOdobesku"},
]
dependencies = [
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "flake8>=7.1.1",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.0",
    "catboost>=1.2.7",
    "ipywidgets>=8.1.5",
    "polars>=1.20.0",
    "shap>=0.46.0",
    "optuna>=4.2.0",
    "mlflow>=2.20.0",
    "python-dotenv>=1.0.1",
    "optuna-integration[catboost]>=4.2.1",
    "boto3>=1.36.6",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.7",
    "locust>=2.32.6",
    "gunicorn>=23.0.0",
    "diagrams>=0.24.1",
    "graphviz>=0.20.3",
]
requires-python = "==3.10.15"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 99
target-version = ["py310"]